Update docs with correct local run commands and known gotchas
- exec:exec uses -Dinput/-Doutput/-DscoringConfig (not -Dexec.args)
- fat JAR requires --add-opens flags for Flink/Kryo
- spring-boot:run sets cwd to serving-api/; application.yaml uses ../ prefix
- JSONL output requires per-line parsing (not python3 -m json.tool on whole file)
- port conflict resolution: lsof -ti :8080 | xargs kill -9

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>